Update ParallelMapper